added inverted index code